--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,17 +17,16 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.5/dist/flowbite.min.css" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAm-Tbvhll6eYrRrthm42too-VSL4CVcY&libraries=places" async defer></script>
-    <!-- <script  src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAm-Tbvhll6eYrRrthm42too-VSL4CVcY&libraries=places"
+        async defer></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
     <title>MusCat</title>
 </head>
 
 <body>
 
-    <script src="https://unpkg.com/flowbite@1.4.5/dist/flowbite.js"></script>
     <noscript></noscript>
     <div id="root"></div>
-
 </body>
 
 </html>
