google analytics and ics calender

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,8 +24,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
     <title>MusCat</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3D4NKCMSJ2"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-<body >
+    gtag('config', 'G-3D4NKCMSJ2');
+</script>
+
+<body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/datepicker.min.js"></script>
     <noscript></noscript>
     <div id="root"></div>
