--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,20 @@
     gtag('config', 'G-3D4NKCMSJ2');
 </script>
 
+<!--Start of Tawk.to Script-->
+<!-- <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/6615b2a71ec1082f04e09988/1hr2c3o9e';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script> -->
+<!--End of Tawk.to Script-->
+
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/datepicker.min.js"></script>
     <noscript></noscript>
