--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,14 +30,14 @@
     <title>MusCat</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3D4NKCMSJ2"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-3D4NKCMSJ2"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-3D4NKCMSJ2');
-</script>
+</script> -->
 
 <!--Start of Tawk.to Script-->
 <!-- <script type="text/javascript">
